# ashtabula

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
ashtabula/: buffer.py  conversation.py  llm.py  stt.py  tts.py  websocket.py
ashtabula/messages/: __init__.py  message_store.py  sqlite_store.py
ashtabula/providers/: __init__.py  message_store_delegate.py
ashtabula/providers/hugging_face/: hf_llm.py  parler_tts.py  speech_t5_tts.py  whisper_sst.py
docs/: DEVELOPER.md  README.md  TEST_SCENARIOS.md  TODO.md  USER_GUIDE.md  generation_log.txt
scripts/: __init__.py  download_models.py  render-diagrams.sh  static_analysis.py
sequence-diagrams/: 1_stt_to_tts.txt  2_interrupt_handling.txt  3_prediction_fallback.txt  4_fallback_to_partial_response.txt  5_error_handling.txt
tests/: __init__.py  bk.test_websocket.py.bk  conftest.py  test_conversation.py  test_stt.py  test_tts.py
tests/messages/: test_message_store.py  test_sqlite_store.py
tests/providers/: __init__.py  test_message_store_delegate.py
tests/providers/hugging_face/: __init__.py  run_hfwhisper_tests.py  test_hf_llm.py  test_speech_t5_tts.py  test_whisper_stt.py
